<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:contentDescription="@string/imgvTaxi"
            android:src="@drawable/taxi" />

        <TextView
            android:id="@+id/txtvUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtvUsuario" />

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtvPassword" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnIniciarSesion"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnIniciarSesion" />

            <Button
                android:id="@+id/btnRegistrate"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnRegistrate" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtvOlvideMiPassword"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_marginTop="26dp"
            android:text="@string/txtvOlvideMiPassword" />
        
    </LinearLayout>
    

</ScrollView>